--- a/report/references.bib
+++ b/report/references.bib
@@ -7,6 +7,33 @@
   note      = {Accedido el 3 de marzo de 2023}
 } 
 
+@misc{chiru_labs_44ab010,
+  title     = {Chiru-Labs/ERC721A (44ab010)},
+  url       = {https://github.com/chiru-labs/ERC721A/tree/44ab0103c2addf9e16bd164422b9a7359eac0a49},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: Chiru-Labs},
+  note      = {Accedido el 6 de marzo de 2023}
+} 
+
+@misc{project_open_sea_419ce28,
+  title     = {ProjectOpenSea/operator-filter-registry (419ce28)},
+  url       = {https://github.com/ProjectOpenSea/operator-filter-registry/tree/419ce2835a6f3bd5be4b14ac19278bb6060312fa},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: ProjectOpenSea},
+  note      = {Accedido el 6 de marzo de 2023}
+} 
+
+@misc{project_open_sea_audit,
+  title     = {OpenSea Operator Filteer Audit Report},
+  url       = {https://github.com/ProjectOpenSea/operator-filter-registry/blob/main/audit/OpenSea\%20Operator\%20Filteer\%20Audit\%20Report.pdf},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: ProjectOpenSea},
+  note      = {Accedido el 6 de marzo de 2023}
+} 
+
 @manual{solidity_error_handling_panicerror,
   title        = {Solidity error handling: Panic via assert and Error via require},
   url          = {https://docs.soliditylang.org/en/v0.8.17/control-structures.html#panic-via-assert-and-error-via-require},
@@ -25,7 +52,7 @@
   language     = {English},
   pubstate     = {(2021)},
   organization = {Ethereum Foundation}
-} 
+}
 
 @manual{solidity_style_guide_enums,
   title        = {Solidity style guide: Enums},
@@ -45,6 +72,53 @@
   language     = {English},
   pubstate     = {(2021)},
   organization = {Ethereum Foundation}
+} 
+
+@manual{solidity_style_guide_natspec,
+  title        = {Solidity style guide: NatSpec Format},
+  url          = {https://docs.soliditylang.org/en/v0.8.17/natspec-format.html},
+  note         = {Accedido el 7 de marzo de 2023},
+  version      = {0.8.17},
+  language     = {English},
+  pubstate     = {(2021)},
+  organization = {Ethereum Foundation}
+} 
+
+@manual{solidity_style_guide_order_function,
+  title        = {Solidity style guide: Order of functions},
+  url          = {https://docs.soliditylang.org/en/v0.8.17/style-guide.html#order-of-functions},
+  note         = {Accedido el 7 de marzo de 2023},
+  version      = {0.8.17},
+  language     = {English},
+  pubstate     = {(2021)},
+  organization = {Ethereum Foundation}
+} 
+
+@misc{xbetters_audit_approve1,
+  title     = {VenturaLM/XBetters-audit/src/test/XBetters.js},
+  url       = {https://github.com/VenturaLM/XBetters-audit/blob/master/src/test/XBetters.js#L104},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: VenturaLM},
+  note      = {Accedido el 7 de marzo de 2023}
+}
+
+@misc{xbetters_audit_approve2,
+  title     = {VenturaLM/XBetters-audit/src/test/XBetters.js},
+  url       = {https://github.com/VenturaLM/XBetters-audit/blob/master/src/test/XBetters.js#L129},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: VenturaLM},
+  note      = {Accedido el 7 de marzo de 2023}
+}
+
+@misc{xbetters_audit_whitelistAMint,
+  title     = {VenturaLM/XBetters-audit/src/test/XBetters.js},
+  url       = {https://github.com/VenturaLM/XBetters-audit/blob/master/src/test/XBetters.js#L152},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: VenturaLM},
+  note      = {Accedido el 6 de marzo de 2023}
 }
 
 @misc{xbetters_l37_38_39,
@@ -57,6 +131,13 @@
 @misc{xbetters_l45,
   author = {Ángel Moratilla},
   url    = {https://etherscan.io/address/0xd19056371236ed978aa2e23699bb5efad0bc3566#code#F1#L45},
+  title  = {Etherscan: XBetters.sol},
+  year   = {(2022)}
+} 
+
+@misc{xbetters_l60,
+  author = {Ángel Moratilla},
+  url    = {https://etherscan.io/address/0xd19056371236ed978aa2e23699bb5efad0bc3566#code#F1#L60},
   title  = {Etherscan: XBetters.sol},
   year   = {(2022)}
 } 
