--- a/report/references.bib
+++ b/report/references.bib
@@ -121,6 +121,15 @@
   note      = {Accedido el 6 de marzo de 2023}
 }
 
+@misc{xbetters_ip,
+  title     = {VenturaLM/XBetters-audit/src/contracts/XBetters\_IP.sol},
+  url       = {https://github.com/VenturaLM/XBetters-audit/blob/master/src/contracts/XBetters_IP.sol},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  author    = {GitHub: VenturaLM},
+  note      = {Accedido el 7 de marzo de 2023}
+}
+
 @misc{xbetters_l37_38_39,
   author = {Ángel Moratilla},
   url    = {https://etherscan.io/address/0xd19056371236ed978aa2e23699bb5efad0bc3566#code#F1#L37},
